force-app/main/default/objects/Engineered_Package_Project__c/Engineered_Package_Project__c.object-meta.xml
<CustomObject>
    <description>UES projects synced with corresponding information in @Task.</description>
    <label>Engineered Package Project</label>
    <nameField>
        <label>Engineered Package Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineered Package Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>