force-app/main/default/objects/Engineered_Package_Project__c/fields/Billable_Project__c.field-meta.xml
<CustomField>
    <fullName>Billable_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable Project</label>
    <type>Checkbox</type>
</CustomField>