force-app/main/default/objects/Engineered_Package_Project__c/fields/Box_com_URL__c.field-meta.xml
<CustomField>
    <fullName>Box_com_URL__c</fullName>
    <label>Box.com URL</label>
    <type>Url</type>
</CustomField>