force-app/main/default/objects/Engineered_Package_Project__c/fields/Ship_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_Tracking_Number__c</fullName>
    <label>Ship Tracking Number</label>
    <type>TextArea</type>
</CustomField>