force-app/main/default/objects/Engineered_Package_Project__c/fields/UWW_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>UWW_Part_Number__c</fullName>
    <description>Maps to @Task.</description>
    <label>Project #</label>
    <length>22</length>
    <type>Text</type>
</CustomField>