force-app/main/default/objects/Engineered_Package_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Planned_Completion_Date__c</columns>
    <columns>Project_Stage__c</columns>
    <columns>Total_Tasks__c</columns>
    <columns>UWW_Part_Number__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>