force-app/main/default/objects/Engineered_Package_Project__c/listViews/Projects_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Projects_Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Planned_Completion_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Project_Stage__c</columns>
    <columns>Total_Tasks__c</columns>
    <columns>UWW_Part_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Projects Last 30 Days</label>
    <language>en_US</language>
</ListView>