force-app/main/default/objects/Engineered_Package_Project__c/listViews/Today_s_Projects.listView-meta.xml
<ListView>
    <fullName>Today_s_Projects</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Planned_Completion_Date__c</columns>
    <columns>Project_Stage__c</columns>
    <columns>Total_Tasks__c</columns>
    <columns>UWW_Part_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Projects</label>
    <language>en_US</language>
</ListView>